--- a/tests/SprykerTest/Zed/ProductLabelCollector/codeception.yml
+++ b/tests/SprykerTest/Zed/ProductLabelCollector/codeception.yml
@@ -4,7 +4,7 @@ paths:
     tests: .
     data: ../../../_data
     support: _support
-    log: ../../../_output
+    output: ../../../_output
 
 coverage:
     enabled: true
@@ -14,7 +14,7 @@ coverage:
 suites:
     Business:
         path: Business
-        class_name: ProductLabelCollectorBusinessTester
+        actor: ProductLabelCollectorBusinessTester
         modules:
             enabled:
                 - Asserts
@@ -29,7 +29,7 @@ suites:
                 - \SprykerTest\Shared\Product\Helper\ProductDataHelper
     Persistence:
         path: Persistence
-        class_name: ProductLabelCollectorPersistenceTester
+        actor: ProductLabelCollectorPersistenceTester
         modules:
             enabled:
                 - Asserts
