--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,10 @@
     },
     "require-dev": {
         "spryker/code-sniffer": "*",
+        "spryker/container": "*",
         "spryker/product": "*",
         "spryker/propel": "^3.0.0",
+        "spryker/store": "*",
         "spryker/testify": "*"
     },
     "autoload": {
