FRW-1817 Fixed false positive test cases with Dynamic Multistore mode enabled. (#10862)
FRW-6382 Adjust StoreDependencyHelper and related tests to cover cases when there is no store provided

--- a/tests/SprykerTest/Zed/ProductLabelCollector/codeception.yml
+++ b/tests/SprykerTest/Zed/ProductLabelCollector/codeception.yml
@@ -28,7 +28,7 @@ suites:
                 - \SprykerTest\Zed\ProductLabel\Helper\ProductLabelDataHelper
                 - \SprykerTest\Shared\Product\Helper\ProductDataHelper
                 - \SprykerTest\Service\Container\Helper\ContainerHelper
-                - \SprykerTest\Shared\Store\Helper\StoreDependencyHelper
+                - \SprykerTest\Zed\Store\Helper\StoreDependencyHelper
     Persistence:
         path: Persistence
         actor: ProductLabelCollectorPersistenceTester
